Change category icons. Add new expense category 'Subscription'

--- a/MoneyM/Localizable.xcstrings
+++ b/MoneyM/Localizable.xcstrings
@@ -1376,6 +1376,23 @@
         }
       }
     },
+    "subscriptions.category" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Subscription"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Подписка"
+          }
+        }
+      }
+    },
     "sweets.category" : {
       "extractionState" : "manual",
       "localizations" : {
